// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnlockTokensModal should handle unlock token transaction with error 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 fZbJac"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="flex justify-between items-end bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Locked Balance
                  </h1>
                  <div
                    class="text-theme-secondary-text"
                    data-testid="header__subtitle"
                  >
                    View the details of your locked balances and waiting periods within the table below. Select the balances you wish to unlock once the waiting period has expired.
                  </div>
                </div>
              </div>
              <div
                class="py-3"
              >
                <div
                  class="relative border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                >
                  <div
                    class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                    role="table"
                  >
                    <table
                      cellpadding="0"
                      class="table-auto"
                    >
                      <thead>
                        <tr
                          class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                          role="row"
                        >
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--0"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div>
                                Amount
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="sc-bdnxRM AkeAK transition-transform transform rotate-180"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--1"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div>
                                Time
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="sc-bdnxRM AkeAK transition-transform transform rotate-180"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--2"
                            role="columnheader"
                          >
                            <div
                              class="flex flex-inline align-top justify-end float-right flex-row-reverse"
                            >
                              <div>
                                <span
                                  class="mr-3"
                                >
                                  Status
                                </span>
                                <input
                                  checked=""
                                  class="Checkbox-sc-1aq7nos-0 drePYo"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        role="rowgroup"
                      >
                        <tr
                          class="TableRow__TableRowStyled-sc-y9j4av-0 cPmOfx"
                          data-testid="TableRow"
                        >
                          <td>
                            <div
                              class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jtRNyC"
                            >
                              <span
                                class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
                                data-testid="AmountCrypto"
                              >
                                30 LSK
                              </span>
                            </div>
                          </td>
                          <td>
                            <div
                              class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dEQQQI"
                            >
                              <time
                                class="text-theme-secondary-700"
                                datetime="Wed, 01 Jan 2020 00:00:00 GMT"
                              >
                                01 Jan 2020 at 00:00:00 (6 months ago)
                              </time>
                            </div>
                          </td>
                          <td>
                            <div
                              class="TableCell__TableCellInnerWrapper-sc-v39gua-0 kXCVVq justify-end"
                            >
                              <div
                                class="flex items-center"
                              >
                                <div
                                  class="flex items-center"
                                >
                                  <span
                                    class="text-theme-secondary-700"
                                    data-testid="UnlockableBalanceRow__status"
                                  >
                                    Unlockable
                                  </span>
                                  <div
                                    class="sc-bdnxRM NjstW text-theme-primary-600 mr-3 ml-2"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      unlock-token.svg
                                    </svg>
                                  </div>
                                </div>
                                <input
                                  class="Checkbox-sc-1aq7nos-0 drePYo"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="flex items-center justify-between mt-4"
                >
                  <div
                    class="flex flex-col items-start"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="text-theme-secondary-500 text-sm font-semibold mb-2"
                    >
                      Total Amount
                    </p>
                    <div
                      class="Label-sc-4akkzw-0 bdvTBm"
                      color="success"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="AmountCrypto"
                        >
                          + 30 LSK
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-col items-end"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="text-theme-secondary-500 text-sm font-semibold mb-2"
                    >
                      Transaction Fee
                    </p>
                    <div
                      class="Label-sc-4akkzw-0 dCEjSJ"
                      color="danger"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <div
                          class="flex items-center justify-center bg-theme-danger-100 dark:bg-theme-danger-400 -ml-1.5 px-2"
                          data-testid="AmountLabel__hint"
                        >
                          <div
                            class="sc-bdnxRM AkeAK dark:text-white"
                            height="10"
                            width="10"
                          >
                            <svg>
                              hint-small.svg
                            </svg>
                          </div>
                        </div>
                        <span
                          class="whitespace-nowrap"
                          data-testid="AmountCrypto"
                        >
                          - 0.00147 LSK
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Close
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Unlock
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with error 2`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 fZbJac"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="flex justify-between items-end bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Unlock Balance
                  </h1>
                </div>
              </div>
              <div
                class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 fTKZwd no-ligatures pt-4"
                data-testid="TransactionSender"
              >
                <div
                  class="flex-1 space-y-2 w-40 whitespace-nowrap"
                >
                  <div
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                  >
                    Sender
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                    >
                      <span
                        class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                        data-testid="Address__address"
                      >
                        lsk7faq75geeaphrz5m4kknbhdzbb4jy7kd3st77z
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center -space-x-1"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="lsk7faq75geeaphrz5m4kknbhdzbb4jy7kd3st77z"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(139, 195, 74)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"60\\" cx=\\"90\\" cy=\\"30\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"50\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                        title="lsk7faq75geeaphrz5m4kknbhdzbb4jy7kd3st77z"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 gxyXCF no-ligatures"
                data-testid="TransactionAmount"
              >
                <div
                  class="flex-1 space-y-2 w-40 whitespace-nowrap"
                >
                  <div
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                  >
                    Total Amount
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="Label-sc-4akkzw-0 bdvTBm"
                      color="success"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="AmountCrypto"
                        >
                          + 30 LSK
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 gxyXCF no-ligatures"
                data-testid="TransactionFee"
              >
                <div
                  class="flex-1 space-y-2 w-40 whitespace-nowrap"
                >
                  <div
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                  >
                    Transaction Fee
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="AmountCrypto"
                    >
                      0.00147 LSK
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Confirm
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with error 3`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 fZbJac"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="space-y-6"
                data-testid="AuthenticationStep"
              >
                <div
                  class="flex justify-between items-end bg-theme-background"
                >
                  <div
                    class="space-y-4"
                  >
                    <h1
                      class="mb-0 text-2xl"
                      data-testid="header__title"
                    >
                      Authenticate
                    </h1>
                    <div
                      class="text-theme-secondary-text"
                      data-testid="header__subtitle"
                    >
                      Enter your mnemonic passphrase to authenticate the transaction.
                    </div>
                  </div>
                </div>
                <fieldset
                  class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
                >
                  <label
                    class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                    data-testid="FormLabel"
                    for="mnemonic"
                  >
                    Mnemonic
                  </label>
                  <div
                    class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                  >
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="AuthenticationStep__mnemonic"
                        name="mnemonic"
                        type="password"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class=""
                      >
                        <button
                          class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
                          data-ring-focus-margin="-m-1"
                          data-testid="InputPassword__toggle"
                          type="button"
                        >
                          <div
                            class="sc-bdnxRM NjstW"
                            height="20"
                            width="20"
                          >
                            <svg>
                              eye.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                class="flex justify-end pt-3 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 fyuekd"
                  data-testid="UnlockTokensAuthentication__send"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span>
                      Send
                    </span>
                    <div
                      class="sc-bdnxRM AFVmm"
                      height="16"
                      width="16"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with error 4`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 fZbJac"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="space-y-8"
                data-testid="ErrorStep"
              >
                <div
                  class="flex justify-between items-end bg-theme-background"
                >
                  <div
                    class="space-y-4"
                  >
                    <h1
                      class="mb-0 text-2xl"
                      data-testid="header__title"
                    >
                      Transaction Error
                    </h1>
                  </div>
                </div>
                <svg
                  class="w-full"
                >
                  transaction-error-banner-dark-green.svg
                </svg>
                <div
                  class="space-y-6"
                >
                  <p
                    class="text-theme-secondary-text"
                  >
                    An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
                  </p>
                  <div
                    class="Input__InputWrapperStyled-sc-1i8sd1r-0 ioTDRK py-4"
                    disabled=""
                  >
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <textarea
                        class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full resize-none text-theme-secondary-text"
                        data-testid="ErrorStep__errorMessage"
                        disabled=""
                        style="height: 4px;"
                      >
                        {"message":"unable to unlock token","type":"Error"}
                      </textarea>
                    </div>
                  </div>
                </div>
                <div
                  class="flex justify-between"
                >
                  <div>
                    <div
                      class="relative"
                    >
                      <button
                        class="ClipboardButton__StyledButton-sc-cammp1-0 dqAYlb"
                        data-testid="clipboard-button__wrapper"
                        type="button"
                      >
                        <div
                          class="flex items-center space-x-2"
                        >
                          <div
                            class="sc-bdnxRM AFVmm"
                            height="16"
                            width="16"
                          >
                            <svg>
                              copy.svg
                            </svg>
                          </div>
                          <span>
                            Copy
                          </span>
                        </div>
                      </button>
                    </div>
                  </div>
                  <div
                    class="flex space-x-3"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
                      data-testid="ErrorStep__repeat-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Retry
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with success 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 fZbJac"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="flex justify-between items-end bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Locked Balance
                  </h1>
                  <div
                    class="text-theme-secondary-text"
                    data-testid="header__subtitle"
                  >
                    View the details of your locked balances and waiting periods within the table below. Select the balances you wish to unlock once the waiting period has expired.
                  </div>
                </div>
              </div>
              <div
                class="py-3"
              >
                <div
                  class="relative border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                >
                  <div
                    class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                    role="table"
                  >
                    <table
                      cellpadding="0"
                      class="table-auto"
                    >
                      <thead>
                        <tr
                          class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                          role="row"
                        >
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--0"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div>
                                Amount
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="sc-bdnxRM AkeAK transition-transform transform rotate-180"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--1"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div>
                                Time
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="sc-bdnxRM AkeAK transition-transform transform rotate-180"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--2"
                            role="columnheader"
                          >
                            <div
                              class="flex flex-inline align-top justify-end float-right flex-row-reverse"
                            >
                              <div>
                                <span
                                  class="mr-3"
                                >
                                  Status
                                </span>
                                <input
                                  checked=""
                                  class="Checkbox-sc-1aq7nos-0 drePYo"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        role="rowgroup"
                      >
                        <tr
                          class="TableRow__TableRowStyled-sc-y9j4av-0 cPmOfx"
                          data-testid="TableRow"
                        >
                          <td>
                            <div
                              class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jtRNyC"
                            >
                              <span
                                class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
                                data-testid="AmountCrypto"
                              >
                                30 LSK
                              </span>
                            </div>
                          </td>
                          <td>
                            <div
                              class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dEQQQI"
                            >
                              <time
                                class="text-theme-secondary-700"
                                datetime="Wed, 01 Jan 2020 00:00:00 GMT"
                              >
                                01 Jan 2020 at 00:00:00 (6 months ago)
                              </time>
                            </div>
                          </td>
                          <td>
                            <div
                              class="TableCell__TableCellInnerWrapper-sc-v39gua-0 kXCVVq justify-end"
                            >
                              <div
                                class="flex items-center"
                              >
                                <div
                                  class="flex items-center"
                                >
                                  <span
                                    class="text-theme-secondary-700"
                                    data-testid="UnlockableBalanceRow__status"
                                  >
                                    Unlockable
                                  </span>
                                  <div
                                    class="sc-bdnxRM NjstW text-theme-primary-600 mr-3 ml-2"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      unlock-token.svg
                                    </svg>
                                  </div>
                                </div>
                                <input
                                  class="Checkbox-sc-1aq7nos-0 drePYo"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="flex items-center justify-between mt-4"
                >
                  <div
                    class="flex flex-col items-start"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="text-theme-secondary-500 text-sm font-semibold mb-2"
                    >
                      Total Amount
                    </p>
                    <div
                      class="Label-sc-4akkzw-0 bdvTBm"
                      color="success"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="AmountCrypto"
                        >
                          + 30 LSK
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-col items-end"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="text-theme-secondary-500 text-sm font-semibold mb-2"
                    >
                      Transaction Fee
                    </p>
                    <div
                      class="Label-sc-4akkzw-0 dCEjSJ"
                      color="danger"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <div
                          class="flex items-center justify-center bg-theme-danger-100 dark:bg-theme-danger-400 -ml-1.5 px-2"
                          data-testid="AmountLabel__hint"
                        >
                          <div
                            class="sc-bdnxRM AkeAK dark:text-white"
                            height="10"
                            width="10"
                          >
                            <svg>
                              hint-small.svg
                            </svg>
                          </div>
                        </div>
                        <span
                          class="whitespace-nowrap"
                          data-testid="AmountCrypto"
                        >
                          - 0.00147 LSK
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Close
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Unlock
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with success 2`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 fZbJac"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="flex justify-between items-end bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Unlock Balance
                  </h1>
                </div>
              </div>
              <div
                class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 fTKZwd no-ligatures pt-4"
                data-testid="TransactionSender"
              >
                <div
                  class="flex-1 space-y-2 w-40 whitespace-nowrap"
                >
                  <div
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                  >
                    Sender
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                    >
                      <span
                        class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                        data-testid="Address__address"
                      >
                        lsk7faq75geeaphrz5m4kknbhdzbb4jy7kd3st77z
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center -space-x-1"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="lsk7faq75geeaphrz5m4kknbhdzbb4jy7kd3st77z"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(139, 195, 74)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"60\\" cx=\\"90\\" cy=\\"30\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"50\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                        title="lsk7faq75geeaphrz5m4kknbhdzbb4jy7kd3st77z"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 gxyXCF no-ligatures"
                data-testid="TransactionAmount"
              >
                <div
                  class="flex-1 space-y-2 w-40 whitespace-nowrap"
                >
                  <div
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                  >
                    Total Amount
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="Label-sc-4akkzw-0 bdvTBm"
                      color="success"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="AmountCrypto"
                        >
                          + 30 LSK
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
                >
                  <div
                    class="sc-bdnxRM NjstW"
                    height="20"
                    width="20"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 gxyXCF no-ligatures"
                data-testid="TransactionFee"
              >
                <div
                  class="flex-1 space-y-2 w-40 whitespace-nowrap"
                >
                  <div
                    class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                  >
                    Transaction Fee
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <span
                      class="whitespace-nowrap"
                      data-testid="AmountCrypto"
                    >
                      0.00147 LSK
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Confirm
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with success 3`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 fZbJac"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="space-y-6"
                data-testid="AuthenticationStep"
              >
                <div
                  class="flex justify-between items-end bg-theme-background"
                >
                  <div
                    class="space-y-4"
                  >
                    <h1
                      class="mb-0 text-2xl"
                      data-testid="header__title"
                    >
                      Authenticate
                    </h1>
                    <div
                      class="text-theme-secondary-text"
                      data-testid="header__subtitle"
                    >
                      Enter your mnemonic passphrase to authenticate the transaction.
                    </div>
                  </div>
                </div>
                <fieldset
                  class="FormField__FormFieldStyled-sc-q4bblx-0 kjTmeH flex flex-col space-y-2"
                >
                  <label
                    class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                    data-testid="FormLabel"
                    for="mnemonic"
                  >
                    Mnemonic
                  </label>
                  <div
                    class="Input__InputWrapperStyled-sc-1i8sd1r-0 jTKKsy"
                  >
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        class="Input__InputStyled-sc-1i8sd1r-1 exXuoZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="AuthenticationStep__mnemonic"
                        name="mnemonic"
                        type="password"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class=""
                      >
                        <button
                          class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
                          data-ring-focus-margin="-m-1"
                          data-testid="InputPassword__toggle"
                          type="button"
                        >
                          <div
                            class="sc-bdnxRM NjstW"
                            height="20"
                            width="20"
                          >
                            <svg>
                              eye.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <div
                class="flex justify-end pt-3 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 fyuekd"
                  data-testid="UnlockTokensAuthentication__send"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <span>
                      Send
                    </span>
                    <div
                      class="sc-bdnxRM AFVmm"
                      height="16"
                      width="16"
                    >
                      <svg>
                        double-arrow-right.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should handle unlock token transaction with success 4`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 fZbJac"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <section
                class="space-y-8"
                data-testid="TransactionSuccessful"
              >
                <div
                  class="flex justify-between items-end bg-theme-background"
                >
                  <div
                    class="space-y-4"
                  >
                    <h1
                      class="mb-0 text-2xl"
                      data-testid="header__title"
                    >
                      Successfully Unlocked Balance
                    </h1>
                  </div>
                </div>
                <svg
                  class="w-full"
                >
                  transaction-success-banner-dark-green.svg
                </svg>
                <p
                  class="text-theme-secondary-text"
                >
                  Your balance unlock transaction has been sent successfully.
                </p>
                <div>
                  <div
                    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 iMRWgr no-ligatures"
                    data-testid="TransactionDetail"
                  >
                    <div
                      class="flex-1 space-y-2 w-40 whitespace-nowrap"
                    >
                      <div
                        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                      >
                        ID
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        <div
                          class="flex overflow-hidden items-baseline space-x-3"
                        >
                          <span
                            class="overflow-hidden"
                          >
                            <a
                              class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                              data-ring-focus-margin="-m-1"
                              data-testid="Link"
                              href="#"
                              rel="noopener noreferrer"
                              to="https://testnet.lisk.observer/transaction/adaf8f61b332611c6d4bd6ac3e75bafc7c82eeee8a4bee14ded471f1373cd23a"
                            >
                              <span
                                class="Link__Content-sc-ec014t-1 hUiuRR"
                              >
                                <span
                                  class="inline-flex overflow-hidden"
                                >
                                  adaf8f61b332611c6d4bd6ac3e75bafc7c82eeee8a4bee14ded471f1373cd23a
                                </span>
                              </span>
                              <div
                                class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block text-sm"
                                data-testid="Link__external"
                                height="16"
                                width="16"
                              >
                                <svg>
                                  arrow-external.svg
                                </svg>
                              </div>
                            </a>
                          </span>
                          <span
                            class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                          >
                            <button
                              class="relative focus:outline-none ring-focus"
                              data-ring-focus-margin="-m-1"
                              data-testid="clipboard-icon__wrapper"
                              type="button"
                            >
                              <div
                                class="sc-bdnxRM AFVmm"
                                height="16"
                                width="16"
                              >
                                <svg>
                                  copy.svg
                                </svg>
                              </div>
                            </button>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
                    data-testid="TransactionType"
                  >
                    <div
                      class="flex-1 space-y-2 w-40 whitespace-nowrap"
                    >
                      <div
                        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                      >
                        Transaction Type
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        Unlock Balance
                      </div>
                    </div>
                    <div
                      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-text border-theme-text dark:text-theme-secondary-600 dark:border-theme-secondary-600 ring-theme-background"
                    >
                      <div
                        class="sc-bdnxRM NjstW"
                        height="20"
                        width="20"
                      >
                        <svg>
                          unlock-token.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
                    data-testid="TransactionNetwork"
                  >
                    <div
                      class="flex-1 space-y-2 w-40 whitespace-nowrap"
                    >
                      <div
                        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                      >
                        Cryptoasset
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        Lisk Testnet
                      </div>
                    </div>
                    <div
                      aria-label="Lisk Testnet"
                      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
                      data-testid="NetworkIcon-LSK-lsk.testnet"
                    >
                      <div
                        class="sc-bdnxRM NjstW"
                        data-testid="NetworkIcon__icon"
                        height="20"
                        width="20"
                      >
                        <svg>
                          lsk.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
                    data-testid="TransactionSender"
                  >
                    <div
                      class="flex-1 space-y-2 w-40 whitespace-nowrap"
                    >
                      <div
                        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                      >
                        Sender
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        <div
                          class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                        >
                          <span
                            class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            lsk7faq75geeaphrz5m4kknbhdzbb4jy7kd3st77z
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="flex items-center -space-x-1"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="lsk7faq75geeaphrz5m4kknbhdzbb4jy7kd3st77z"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(139, 195, 74)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"60\\" cx=\\"90\\" cy=\\"30\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"50\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                            title="lsk7faq75geeaphrz5m4kknbhdzbb4jy7kd3st77z"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
                    data-testid="TransactionAmount"
                  >
                    <div
                      class="flex-1 space-y-2 w-40 whitespace-nowrap"
                    >
                      <div
                        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                      >
                        Total Amount
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        <div
                          class="Label-sc-4akkzw-0 bdvTBm"
                          color="success"
                        >
                          <div
                            class="flex space-x-1 items-stretch"
                          >
                            <span
                              class="whitespace-nowrap"
                              data-testid="AmountCrypto"
                            >
                              + 30 LSK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
                    >
                      <div
                        class="sc-bdnxRM NjstW"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
                    data-testid="TransactionFee"
                  >
                    <div
                      class="flex-1 space-y-2 w-40 whitespace-nowrap"
                    >
                      <div
                        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                      >
                        Transaction Fee
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="AmountCrypto"
                        >
                          0.00147 LSK
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
                    data-testid="TransactionTimestamp"
                  >
                    <div
                      class="flex-1 space-y-2 w-40 whitespace-nowrap"
                    >
                      <div
                        class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700 no-ligatures"
                      >
                        Timestamp
                      </div>
                      <div
                        class="flex items-center font-semibold"
                      >
                        01.07.2020 12:00 AM
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UnlockTokensModal should render 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 fZbJac"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 hDDKXm w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <div
            class="flex-1"
          >
            <form
              class="space-y-5"
              data-testid="UnlockTokensModal"
            >
              <div
                class="flex justify-between items-end bg-theme-background"
              >
                <div
                  class="space-y-4"
                >
                  <h1
                    class="mb-0 text-2xl"
                    data-testid="header__title"
                  >
                    Locked Balance
                  </h1>
                  <div
                    class="text-theme-secondary-text"
                    data-testid="header__subtitle"
                  >
                    View the details of your locked balances and waiting periods within the table below. Select the balances you wish to unlock once the waiting period has expired.
                  </div>
                </div>
              </div>
              <div
                class="py-3"
              >
                <div
                  class="relative border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                >
                  <div
                    class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                    role="table"
                  >
                    <table
                      cellpadding="0"
                      class="table-auto"
                    >
                      <thead>
                        <tr
                          class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                          role="row"
                        >
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--0"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div>
                                Amount
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="sc-bdnxRM AkeAK transition-transform transform rotate-180"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--1"
                            role="columnheader"
                            style="cursor: pointer;"
                            title="Toggle SortBy"
                          >
                            <div
                              class="flex flex-inline align-top"
                            >
                              <div>
                                Time
                              </div>
                              <div
                                class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                              >
                                <div
                                  class="sc-bdnxRM AkeAK transition-transform transform rotate-180"
                                  height="10"
                                  role="img"
                                  width="10"
                                >
                                  <svg>
                                    chevron-down-small.svg
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </th>
                          <th
                            class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                            colspan="1"
                            data-testid="table__th--2"
                            role="columnheader"
                          >
                            <div
                              class="flex flex-inline align-top justify-end float-right flex-row-reverse"
                            >
                              <div>
                                <span
                                  class="mr-3"
                                >
                                  Status
                                </span>
                                <input
                                  checked=""
                                  class="Checkbox-sc-1aq7nos-0 drePYo"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        role="rowgroup"
                      >
                        <tr
                          class="TableRow__TableRowStyled-sc-y9j4av-0 cPmOfx"
                          data-testid="TableRow"
                        >
                          <td>
                            <div
                              class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jtRNyC"
                            >
                              <span
                                class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
                                data-testid="AmountCrypto"
                              >
                                30 LSK
                              </span>
                            </div>
                          </td>
                          <td>
                            <div
                              class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dEQQQI"
                            >
                              <time
                                class="text-theme-secondary-700"
                                datetime="Wed, 01 Jan 2020 00:00:00 GMT"
                              >
                                01 Jan 2020 at 00:00:00 (6 months ago)
                              </time>
                            </div>
                          </td>
                          <td>
                            <div
                              class="TableCell__TableCellInnerWrapper-sc-v39gua-0 kXCVVq justify-end"
                            >
                              <div
                                class="flex items-center"
                              >
                                <div
                                  class="flex items-center"
                                >
                                  <span
                                    class="text-theme-secondary-700"
                                    data-testid="UnlockableBalanceRow__status"
                                  >
                                    Unlockable
                                  </span>
                                  <div
                                    class="sc-bdnxRM NjstW text-theme-primary-600 mr-3 ml-2"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      unlock-token.svg
                                    </svg>
                                  </div>
                                </div>
                                <input
                                  class="Checkbox-sc-1aq7nos-0 drePYo"
                                  color="success"
                                  type="checkbox"
                                />
                              </div>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
                <div
                  class="flex items-center justify-between mt-4"
                >
                  <div
                    class="flex flex-col items-start"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="text-theme-secondary-500 text-sm font-semibold mb-2"
                    >
                      Total Amount
                    </p>
                    <div
                      class="Label-sc-4akkzw-0 bdvTBm"
                      color="success"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <span
                          class="whitespace-nowrap"
                          data-testid="AmountCrypto"
                        >
                          + 30 LSK
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-col items-end"
                    data-testid="UnlockTokensTotal"
                  >
                    <p
                      class="text-theme-secondary-500 text-sm font-semibold mb-2"
                    >
                      Transaction Fee
                    </p>
                    <div
                      class="Label-sc-4akkzw-0 dCEjSJ"
                      color="danger"
                    >
                      <div
                        class="flex space-x-1 items-stretch"
                      >
                        <div
                          class="flex items-center justify-center bg-theme-danger-100 dark:bg-theme-danger-400 -ml-1.5 px-2"
                          data-testid="AmountLabel__hint"
                        >
                          <div
                            class="sc-bdnxRM AkeAK dark:text-white"
                            height="10"
                            width="10"
                          >
                            <svg>
                              hint-small.svg
                            </svg>
                          </div>
                        </div>
                        <span
                          class="whitespace-nowrap"
                          data-testid="AmountCrypto"
                        >
                          - 0.00147 LSK
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex justify-end space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 cALXLL"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Close
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-o0fs2j-0 eJvReC"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Unlock
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
